--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
+    "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "material-icons": "^1.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
