--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipes-site",
+  "name": "eshop-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,10 +13,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
-    "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
     "material-icons": "^1.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
